# telegram-communa-bot

./: .env.dev  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  manual_test.py  pyproject.toml
charts/lobby-bot/: Chart.yaml  values.yaml
charts/lobby-bot/templates/: _helpers.tpl  deployment.yaml  secrets.yaml
src/telegram_communa_bot/: bot.py  common.py  forwarding.py  lobby_chat.py  logging_config.py  logging_setup.py  main.py  persistent.py  private.py  public_chat.py  settings.py
src/telegram_communa_bot/bot/: admin.py  app_data.py  bot.py  common.py  globals.py  lobby_chat.py  private.py  public_chat.py
tests/: test_forwarding.py  test_integration.py  test_logging.py  test_main.py
