[tool.poetry]
name = "telegram-communa-bot"
version = "0.1.0"
description = "Telegram bot for communas"
authors = [ "ardling <ardling@gmail.com>" ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
aiogram = ">=3.22.0,<4.0.0"

[tool.poetry.scripts]
telegram-communa-bot = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
dotenv = "^0.9.9"
black = "^25.1.0"
isort = "^6.0.1"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

